Add postgresql local build

--- a/infrastructure/local/k3d_docker_compose/docker-compose.yaml
+++ b/infrastructure/local/k3d_docker_compose/docker-compose.yaml
@@ -1,7 +1,9 @@
 version: '3'
 services:
   postgresql:
-    image: postgis/postgis:15-3.3-alpine
+    image: postgis-custom
+    build:
+      context: postgresql
     environment:
     - POSTGRES_USER=temba
     - POSTGRES_DB=temba
@@ -9,6 +11,7 @@ services:
     - PGDATA=/var/lib/postgresql/data/pgdata
     volumes:
     - /var/run/postgresql/15/data:/var/lib/postgresql/data
+    - ./postgresql.conf.d:/etc/postgresql/conf.d
   container_registry:
     image: registry:2
     volumes:
@@ -18,7 +21,7 @@ services:
     - ./registry.conf.d:/etc/nginx/conf.d
     build: 
       context: nginx
-    image: registry:proxy
+    image: registry-proxy
     environment:
     - REGISTRY_USERNAME=temba
     - REGISTRY_PASSWORD=temba
