--- a/images/Makefile
+++ b/images/Makefile
@@ -11,17 +11,16 @@ build: $(BUILDS)
 push: $(PUSH)
 
 %.build:
-	$(DOCKER) build \
-		--quiet \
+	$(DOCKER) buildx build \
 		--build-arg $(shell echo $* | tr '[a-z]' '[A-Z]')_VERSION=$(shell jq -r '.tag.version' $*/meta.json) \
 		-t "$(shell jq -r '.tag.name' $*/meta.json):v$(shell jq -r '.tag.version' $*/meta.json)" \
 		-t $(REGISTRY_DOMAIN)/$(shell jq -r '.tag.name' $*/meta.json):v$(shell jq -r '.tag.version' $*/meta.json) \
-		-f $*/Dockerfile $*; \
-		touch $*/$@
+		-f $*/Dockerfile $* > $*/$@ 2>&1; \
+		$(shell tail -n2 $*/$@)
 
 %.push: %.build
 	$(DOCKER) push $(REGISTRY_DOMAIN)/$(shell jq -r '.tag.name' $*/meta.json):v$(shell jq -r '.tag.version' $*/meta.json); \
-	touch $*/$@
+		touch $*/$@
 
 clean:
 	-rm -r **/*.build **/*.push
