--- a/rapidpro/Chart.yaml
+++ b/rapidpro/Chart.yaml
@@ -1,4 +1,11 @@
+annotations:
+  category: Infrastructure
+  licenses: Apache-2.0
 apiVersion: v1
 name: rapidpro-stack
 version: 0.1.0
 appVersion: 7.4.0
+description: Rapidpro is a tool visually building interactive messaging applications.
+maintainers:
+  - name: Ngenda Henry.
+    url: https://github.com/ngendah
