--- a/rapidpro/templates/mailroom.yaml
+++ b/rapidpro/templates/mailroom.yaml
@@ -26,7 +26,7 @@ spec:
         app.kubernetes.io/component: application
         app.kubernetes.io/part-of: mailroom
     spec:
-      serviceAccount: rapidpro
+      serviceAccountName: rapidpro
       topologySpreadConstraints:
       - maxSkew: 1
         topologyKey: kubernetes.io/hostname
