--- a/rapidpro/templates/rapidpro.yaml
+++ b/rapidpro/templates/rapidpro.yaml
@@ -27,7 +27,7 @@ spec:
         app.kubernetes.io/component: application
         app.kubernetes.io/part-of: rapidpro
     spec:
-      serviceAccount: rapidpro
+      serviceAccountName: rapidpro
       topologySpreadConstraints:
       - maxSkew: 3
         topologyKey: kubernetes.io/hostname
@@ -132,7 +132,7 @@ spec:
         app.kubernetes.io/component: application
         app.kubernetes.io/part-of: rapidpro
     spec:
-      serviceAccount: rapidpro
+      serviceAccountName: rapidpro
       topologySpreadConstraints:
       - maxSkew: 3
         topologyKey: kubernetes.io/hostname
