--- a/rapidpro/templates/serviceaccounts.yaml
+++ b/rapidpro/templates/serviceaccounts.yaml
@@ -8,5 +8,7 @@ metadata:
     app.kubernetes.io/part-of: stack
 {{ include "rapidpro-stack.labels" . | indent 4 }}
 automountServiceAccountToken: false
-imagePullSecrets:
-  - name: registry
+imagePullSecrets: 
+{{- range .Values.imagePullSecrets }}
+- name: {{ . }}
+{{- end }}
