--- a/rapidpro/templates/courier.yaml
+++ b/rapidpro/templates/courier.yaml
@@ -61,6 +61,8 @@ spec:
         - containerPort: 8080 
           protocol: TCP
         envFrom:
+        - configMapRef:
+            name: database-host
         - secretRef:
             name: {{ .Values.databaseCredentialsSecret }}
         - secretRef: 
