--- a/rapidpro/templates/courier.yaml
+++ b/rapidpro/templates/courier.yaml
@@ -51,7 +51,7 @@ spec:
         volumeMounts:
         - name: nginx-conf
           mountPath: /etc/nginx/
-      - image: {{ .Values.stack.registry }}/{{ .Values.stack.courier.name }}:{{ .Values.stack.courier.version }}
+      - image: {{ .Values.stack.registry.host }}/{{ .Values.stack.courier.name }}:{{ .Values.stack.courier.version }}
         name: courier
         imagePullPolicy: Always
         securityContext:
