--- a/rapidpro/templates/mailroom.yaml
+++ b/rapidpro/templates/mailroom.yaml
@@ -41,8 +41,7 @@ spec:
         name: mailroom 
         imagePullPolicy: Always
         securityContext:
-          runAsUser: 1001
-          runAsNonRoot: true
+        {{- toYaml .Values.securityContext.mailroom | nindent 10 }}
         ports:
         - containerPort: 8090
           protocol: TCP
