Add pod-security,image-pull-policy and resources to chart values

--- a/rapidpro/templates/migrations.yaml
+++ b/rapidpro/templates/migrations.yaml
@@ -13,10 +13,12 @@ spec:
     spec:
       restartPolicy: Never
       serviceAccountName: rapidpro
+      securityContext:
+      {{- toYaml .Values.podSecurityContext.rapidpro | nindent 8 }}
       containers:
       - image: {{ .Values.stack.registry.host }}/{{ .Values.stack.rapidpro.name }}:{{ .Values.stack.rapidpro.version }}
         name: migrations 
-        imagePullPolicy: Always
+        imagePullPolicy: {{ .Values.imagePullPolicy.rapidpro }}
         securityContext:
         {{- toYaml .Values.securityContext.rapidpro | nindent 10 }}
         args:
@@ -31,3 +33,5 @@ spec:
             name: redis-connection
         - secretRef:
             name: admin-credentials
+        resources:
+        {{- toYaml .Values.resources.rapidpro.migrations | nindent 10 }}
