--- a/rapidpro/templates/courier.yaml
+++ b/rapidpro/templates/courier.yaml
@@ -34,7 +34,7 @@ spec:
           matchLabels:
             app.kubernetes.io/name: courier
       securityContext:
-        fsGroup: 2000
+      {{- toYaml .Values.podSecurityContext.courier | nindent 8 }}
       volumes:
       - name: nginx-conf
         projected:
@@ -53,7 +53,7 @@ spec:
           mountPath: /etc/nginx/
       - image: {{ .Values.stack.registry.host }}/{{ .Values.stack.courier.name }}:{{ .Values.stack.courier.version }}
         name: courier
-        imagePullPolicy: Always
+        imagePullPolicy: {{ .Values.imagePullPolicy.courier }}
         securityContext:
         {{- toYaml .Values.securityContext.courier | nindent 10 }}
         ports:
@@ -69,6 +69,8 @@ spec:
         env:
         - name: BACKEND_URL
           value: http://rapidpro-svc:8080
+        resources:
+        {{- toYaml .Values.resources.courier | nindent 10 }}
 ---
 apiVersion: v1
 kind: Service
