--- a/rapidpro/templates/mailroom.yaml
+++ b/rapidpro/templates/mailroom.yaml
@@ -35,11 +35,11 @@ spec:
           matchLabels:
             app: mailroom
       securityContext:
-        fsGroup: 2000
+      {{- toYaml .Values.podSecurityContext.mailroom | nindent 8 }}
       containers:
       - image: {{ .Values.stack.registry.host }}/{{ .Values.stack.mailroom.name }}:{{ .Values.stack.mailroom.version }}
         name: mailroom 
-        imagePullPolicy: Always
+        imagePullPolicy: {{ .Values.imagePullPolicy.mailroom }}
         securityContext:
         {{- toYaml .Values.securityContext.mailroom | nindent 10 }}
         ports:
@@ -60,6 +60,8 @@ spec:
             secretKeyRef:
               name: mailroom-token
               key: token
+        resources:
+        {{- toYaml .Values.resources.mailroom | nindent 10 }}
 ---
 apiVersion: v1
 kind: Service
