--- a/rapidpro/templates/rapidpro.yaml
+++ b/rapidpro/templates/rapidpro.yaml
@@ -26,6 +26,8 @@ spec:
         app.kubernetes.io/component: application
         app.kubernetes.io/part-of: rapidpro
     spec:
+      securityContext:
+      {{- toYaml .Values.podSecurityContext.rapidpro | nindent 8 }}
       serviceAccountName: rapidpro
       topologySpreadConstraints:
       - maxSkew: 3
@@ -41,7 +43,7 @@ spec:
       initContainers:
       - image: {{ .Values.stack.registry.host }}/{{ .Values.stack.rapidpro.name }}:{{ .Values.stack.rapidpro.version }}
         name: static-build1
-        imagePullPolicy: Always
+        imagePullPolicy: {{ .Values.imagePullPolicy.rapidpro }}
         securityContext:
         {{- toYaml .Values.securityContext.rapidpro | nindent 10 }}
         command:
@@ -57,7 +59,7 @@ spec:
           mountPath: /home/rapidpro/app/sitestatic 
       - image: {{ .Values.stack.registry.host }}/{{ .Values.stack.rapidpro.name }}:{{ .Values.stack.rapidpro.version }}
         name: static-build2
-        imagePullPolicy: Always
+        imagePullPolicy: {{ .Values.imagePullPolicy.rapidpro }}
         securityContext:
           runAsUser: 1001
           runAsNonRoot: true
@@ -76,7 +78,7 @@ spec:
       containers:
       - image: {{ .Values.stack.registry.host }}/{{ .Values.stack.rapidpro.name }}:{{ .Values.stack.rapidpro.version }}
         name: rapidpro 
-        imagePullPolicy: Always
+        imagePullPolicy: {{ .Values.imagePullPolicy.rapidpro }}
         securityContext:
         {{- toYaml .Values.securityContext.rapidpro | nindent 10 }}
         args:
@@ -113,6 +115,8 @@ spec:
             port: 8000
           initialDelaySeconds: 15
           periodSeconds: 20
+        resources:
+        {{- toYaml .Values.resources.rapidpro.application | nindent 10 }}
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -141,6 +145,8 @@ spec:
         app.kubernetes.io/component: celery
         app.kubernetes.io/part-of: rapidpro
     spec:
+      securityContext:
+      {{- toYaml .Values.podSecurityContext.rapidpro | nindent 8 }}
       serviceAccountName: rapidpro
       topologySpreadConstraints:
       - maxSkew: 3
@@ -152,7 +158,7 @@ spec:
       containers:
       - name: celery
         image: {{ .Values.stack.registry.host }}/{{ .Values.stack.rapidpro.name }}:{{ .Values.stack.rapidpro.version }}
-        imagePullPolicy: Always
+        imagePullPolicy: {{ .Values.imagePullPolicy.rapidpro }}
         securityContext:
         {{- toYaml .Values.securityContext.rapidpro | nindent 10 }}
         args:
@@ -173,6 +179,8 @@ spec:
             secretKeyRef:
               name: mailroom-token
               key: token
+        resources:
+        {{- toYaml .Values.resources.rapidpro.celery | nindent 10 }}
 ---
 apiVersion: v1
 kind: Service
