Refactor chart to sub-charts

--- a/.github/workflows/linux.yaml
+++ b/.github/workflows/linux.yaml
@@ -67,8 +67,8 @@ jobs:
         postgres_conf_d=./infrastructure/local/k3d_compose/postgresql.conf.d
         kubeconfig=./infrastructure/local/k3d_compose/kubeconfig
         helm install --kubeconfig=$kubeconfig rapidpro ./rapidpro \
-          --set stack.registry.host=$(cat $registry_conf_d/hostip) \
-          --set databaseHost.postgres.host="$(cat $postgres_conf_d/hostip)"
+          --set global.registry.host=$(cat $registry_conf_d/hostip) \
+          --set global.databaseHost.postgres.host="$(cat $postgres_conf_d/hostip)"
         count=$(kubectl --kubeconfig=$kubeconfig get po --no-headers -oname | wc -l);
         [ "$count" -gt 1 ]
 
