--- a/rapidpro/templates/serviceaccounts.yaml
+++ b/rapidpro/templates/serviceaccounts.yaml
@@ -2,13 +2,8 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: rapidpro
-  labels:
-    app.kubernetes.io/name: rapidpro
-    app.kubernetes.io/component: configuration
-    app.kubernetes.io/part-of: stack
-{{ include "rapidpro-stack.labels" . | indent 4 }}
 automountServiceAccountToken: false
 imagePullSecrets: 
-{{- range .Values.imagePullSecrets }}
+{{- range .Values.global.imagePullSecrets }}
 - name: {{ . }}
 {{- end }}
