--- a/rapidpro/Chart.yaml
+++ b/rapidpro/Chart.yaml
@@ -5,7 +5,18 @@ apiVersion: v1
 name: rapidpro-stack
 version: 0.1.0
 appVersion: 7.4.0
+type: application
 description: Rapidpro is a tool visually building interactive messaging applications.
 maintainers:
   - name: Ngenda Henry.
     url: https://github.com/ngendah
+dependencies:
+  - name: courier
+    version: 0.1.0
+    repository: file://charts/courier
+  - name: mailroom
+    version: 0.1.0
+    repository: file://charts/mailroom
+  - name: rapidpro
+    version: 0.1.0
+    repository: file://charts/rapidpro
