--- a/rapidpro/charts/rapidpro/templates/app.yaml
+++ b/rapidpro/charts/rapidpro/templates/app.yaml
@@ -3,49 +3,40 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: rapidpro-app
-  labels:
-    app.kubernetes.io/name: rapidpro-app
-    app.kubernetes.io/component: application
-    app.kubernetes.io/part-of: rapidpro
-{{ include "rapidpro-stack.labels" . | indent 4 }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: rapidpro-app
-      app.kubernetes.io/component: application
+      {{- toYaml .Values.app.labels.selectors | nindent 6 }}
   strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxSurge: 50%
-      maxUnavailable: 25%
+    {{- toYaml .Values.app.updateStrategy | nindent 4 }}
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: rapidpro-app
-        app.kubernetes.io/component: application
-        app.kubernetes.io/part-of: rapidpro
+        {{- toYaml .Values.app.labels.pod | nindent 8 }}
+        {{- if .Values.global.labels }}
+          {{- toYaml .Values.global.labels | nindent 8 }}
+        {{- end }}
+      annotations:
+        {{- toYaml .Values.app.annotations | nindent 8 }}
+        {{- if .Values.global.annotations }}
+          {{- toYaml .Values.global.annotations | nindent 8 }}
+        {{- end }}
     spec:
       securityContext:
-      {{- toYaml .Values.rapidpro.app.podSecurityContext | nindent 8 }}
-      serviceAccountName: {{ .Values.rapidpro.serviceAccountName }}
+        {{- toYaml .Values.app.podSecurityContext | nindent 8 }}
+      serviceAccountName: {{ .Values.serviceAccountName }}
       topologySpreadConstraints:
-      - maxSkew: 3
-        topologyKey: kubernetes.io/hostname
-        whenUnsatisfiable: DoNotSchedule
-        labelSelector:
-          matchLabels:
-            app.kubernetes.io/name: rapidpro-app
-            app.kubernetes.io/component: application
+        {{- toYaml .Values.app.topologySpreadConstraints | nindent 8 }}
       volumes:
       - name: static-assets
         emptyDir: {}
       initContainers:
-      - image: {{ .Values.registry.host }}/{{ .Values.rapidpro.image.name }}:{{ .Values.rapidpro.image.version }}
+      - image: {{ .Values.global.registry.host }}/{{ .Values.image.name }}:{{ .Values.image.version }}
         name: static-build1
-        imagePullPolicy: {{ .Values.rapidpro.image.pullPolicy }}
+        imagePullPolicy: {{ .Values.image.pullPolicy }}
         securityContext:
-        {{- toYaml .Values.rapidpro.app.securityContext | nindent 10 }}
+          {{- toYaml .Values.app.securityContext | nindent 10 }}
         command:
         - sh
         - -c
@@ -57,11 +48,11 @@ spec:
         volumeMounts:
         - name: static-assets
           mountPath: /home/rapidpro/app/sitestatic 
-      - image: {{ .Values.registry.host }}/{{ .Values.rapidpro.image.name }}:{{ .Values.rapidpro.image.version }}
+      - image: {{ .Values.global.registry.host }}/{{ .Values.image.name }}:{{ .Values.image.version }}
         name: static-build2
-        imagePullPolicy: {{ .Values.rapidpro.image.pullPolicy }}
+        imagePullPolicy: {{ .Values.image.pullPolicy }}
         securityContext:
-        {{- toYaml .Values.rapidpro.app.securityContext | nindent 10 }}
+          {{- toYaml .Values.app.securityContext | nindent 10 }}
         command:
         - sh
         - -c
@@ -75,11 +66,11 @@ spec:
         - name: static-assets
           mountPath: /home/rapidpro/app/sitestatic
       containers:
-      - image: {{ .Values.registry.host }}/{{ .Values.rapidpro.image.name }}:{{ .Values.rapidpro.image.version }}
+      - image: {{ .Values.global.registry.host }}/{{ .Values.image.name }}:{{ .Values.image.version }}
         name: rapidpro 
-        imagePullPolicy: {{ .Values.rapidpro.imagePullPolicy }}
+        imagePullPolicy: {{ .Values.image.pullPolicy }}
         securityContext:
-        {{- toYaml .Values.rapidpro.app.securityContext | nindent 10 }}
+          {{- toYaml .Values.app.securityContext | nindent 10 }}
         args:
         - -c
         - ./server.sh
@@ -87,7 +78,7 @@ spec:
         - configMapRef:
             name: database-host
         - secretRef:
-            name: {{ .Values.databaseCredentialsSecret }}
+            name: {{ .Values.global.databaseCredentialsSecret }}
         - secretRef:
             name: redis-connection
         env:
@@ -115,5 +106,5 @@ spec:
           initialDelaySeconds: 15
           periodSeconds: 20
         resources:
-        {{- toYaml .Values.rapidpro.app.resources | nindent 10 }}
+          {{- toYaml .Values.app.resources | nindent 10 }}
 ---
