--- a/rapidpro/templates/secrets.yaml
+++ b/rapidpro/templates/secrets.yaml
@@ -3,11 +3,6 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: redis-connection
-  labels:
-    app: rapidpro-stack
-    app.kubernetes.io/name: rapidpro-stack
-    app.kubernetes.io/component: configuration
-    app.kubernetes.io/part-of: stack
 stringData:
-  REDIS_URL: {{ .Values.redis.url }}
+  REDIS_URL: {{ .Values.global.redis.url }}
 ---
