Set k8s job completions

--- a/rapidpro/charts/rapidpro/templates/migrations.yaml
+++ b/rapidpro/charts/rapidpro/templates/migrations.yaml
@@ -4,6 +4,7 @@ metadata:
   name: migrations
 spec:
   backoffLimit: 5
+  completions: 10
   template:
     spec:
       restartPolicy: {{ .Values.migrations.restartPolicy }}
